--- a/src/camera_caliberation_pkg/CMakeLists.txt
+++ b/src/camera_caliberation_pkg/CMakeLists.txt
@@ -16,6 +16,9 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
 )
 
+find_package(OpenCV 4 REQUIRED)
+find_package(yaml-cpp REQUIRED)
+
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
 
@@ -106,10 +109,10 @@ find_package(catkin REQUIRED COMPONENTS
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-#  INCLUDE_DIRS include
-#  LIBRARIES camera_caliberation_pkg
-#  CATKIN_DEPENDS cv_bridge image_transport roscpp rospy sensor_msgs std_msgs
-#  DEPENDS system_lib
+ INCLUDE_DIRS include
+ LIBRARIES camera_caliberation_pkg
+ CATKIN_DEPENDS cv_bridge image_transport roscpp rospy sensor_msgs std_msgs
+ DEPENDS system_lib
 )
 
 ###########
@@ -121,12 +124,21 @@ catkin_package(
 include_directories(
 # include
   ${catkin_INCLUDE_DIRS}
+  ${OpenCV_INCLUDE_DIRS}
 )
 
 ## Declare a C++ library
-# add_library(${PROJECT_NAME}
-#   src/${PROJECT_NAME}/camera_caliberation_pkg.cpp
-# )
+add_library(camera_caliberation_lib
+  include/camera_caliberation_chessboard.h
+  include/param_code.h
+  lib/camera_caliberation_chessboard.cpp
+)
+
+add_dependencies(camera_caliberation_lib ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+
+target_link_libraries(camera_caliberation_lib
+  ${catkin_LIBRARIES}
+)
 
 ## Add cmake target dependencies of the library
 ## as an example, code may need to be generated before libraries
@@ -146,11 +158,14 @@ add_executable(camera_caliberation src/camera_caliberation.cpp)
 
 ## Add cmake target dependencies of the executable
 ## same as for the library above
-add_dependencies(camera_caliberation ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+
 
 ## Specify libraries to link a library or executable target against
 target_link_libraries(camera_caliberation
   ${catkin_LIBRARIES}
+  ${OpenCV_LIBRARIES}
+  camera_caliberation_lib
+  yaml-cpp
 )
 
 #############
