--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,19 @@
 {
-    "cmake.sourceDirectory": "/home/quintinumi/project/ws_camera_caliberation/src/camera_caliberation/src/camera_caliberation_pkg"
+    "cmake.sourceDirectory": "/home/quintinumi/project/ws_camera_caliberation/src/camera_caliberation/src/camera_caliberation_pkg",
+    "python.autoComplete.extraPaths": [
+        "/home/quintinumi/git_package_src/wpr_simulation/devel/lib/python3/dist-packages",
+        "/home/quintinumi/git_package_src/ws_livox/devel/lib/python3/dist-packages",
+        "/opt/ros/noetic/lib/python3/dist-packages"
+    ],
+    "python.analysis.extraPaths": [
+        "/home/quintinumi/git_package_src/wpr_simulation/devel/lib/python3/dist-packages",
+        "/home/quintinumi/git_package_src/ws_livox/devel/lib/python3/dist-packages",
+        "/opt/ros/noetic/lib/python3/dist-packages"
+    ],
+    "files.associations": {
+        "unordered_map": "cpp",
+        "unordered_set": "cpp",
+        "__node_handle": "cpp",
+        "iosfwd": "cpp"
+    }
 }
