--- a/src/camera_caliberation_pkg/config/setup.yaml
+++ b/src/camera_caliberation_pkg/config/setup.yaml
@@ -1,2 +1,17 @@
 
+# image_load_path: /home/quintinumi/project/camera_calibration_img/
+# image_format: png
+
 image_load_path: /home/quintinumi/project/camera_calibration_img/
+image_format: png
+
+yaml_save_path: /home/quintinumi/project/ws_camera_caliberation/src/camera_caliberation/src/camera_caliberation_pkg/config/
+
+chessboard_width: 6
+chessboard_height: 9
+square_size: 20
+
+criteria_iter_times: 10000
+iter_difference: 0.000001
+
+show_corners_image: true
