Create a new function to draw the comparison of the gridpattern and distorted gridpattern

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,6 +65,7 @@
         "deque": "cpp",
         "queue": "cpp",
         "stack": "cpp",
-        "ostream": "cpp"
+        "ostream": "cpp",
+        "__locale": "cpp"
     }
 }
