--- a/src/camera_caliberation_pkg/CMakeLists.txt
+++ b/src/camera_caliberation_pkg/CMakeLists.txt
@@ -161,6 +161,7 @@ target_link_libraries(undistortion_lib
 add_executable(camera_caliberation src/camera_caliberation.cpp)
 add_executable(opencv_undistortion_time_cost_test src/opencv_undistortion_time_cost_test.cpp)
 add_executable(undistortion_sample src/undistortion_sample.cpp)
+add_executable(show_distorted_grid_pattern src/show_distorted_grid_pattern.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -189,6 +190,14 @@ target_link_libraries(undistortion_sample
 )
 
 target_link_libraries(opencv_undistortion_time_cost_test
+  ${catkin_LIBRARIES}
+  ${OpenCV_LIBRARIES}
+  camera_caliberation_lib
+  undistortion_lib
+  yaml-cpp
+)
+
+target_link_libraries(show_distorted_grid_pattern
   ${catkin_LIBRARIES}
   ${OpenCV_LIBRARIES}
   camera_caliberation_lib
