correct some code

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
         "/home/quintinumi/git_package_src/wpr_simulation/devel/lib/python3/dist-packages",
         "/home/quintinumi/git_package_src/ws_livox/devel/lib/python3/dist-packages",
         "/opt/ros/noetic/lib/python3/dist-packages"
-    ]
+    ],
+    "cmake.sourceDirectory": "/home/quintinumi/project/ws_camera_caliberation/src"
 }
