mapping3dpoint to 2d. Uncomplete. continue...

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,6 +74,12 @@
         "forward_list": "cpp",
         "ios": "cpp",
         "locale": "cpp",
-        "queue": "cpp"
+        "queue": "cpp",
+        "__hash_table": "cpp",
+        "deque": "cpp",
+        "unordered_map": "cpp",
+        "unordered_set": "cpp",
+        "hash_map": "cpp",
+        "hash_set": "cpp"
     }
 }
