First step for extrinsics and 3d mapping

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -80,6 +80,10 @@
         "unordered_map": "cpp",
         "unordered_set": "cpp",
         "hash_map": "cpp",
-        "hash_set": "cpp"
+        "hash_set": "cpp",
+        "geometry": "cpp",
+        "core": "cpp",
+        "dense": "cpp",
+        "random": "cpp"
     }
 }
