Realize picture perspective on 3d object

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -84,6 +84,7 @@
         "geometry": "cpp",
         "core": "cpp",
         "dense": "cpp",
-        "random": "cpp"
+        "random": "cpp",
+        "*.ipp": "cpp"
     }
 }
