--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -89,7 +89,9 @@
         "strstream": "cpp",
         "cwctype": "cpp",
         "iomanip": "cpp",
-        "typeindex": "cpp"
+        "typeindex": "cpp",
+        "numeric": "cpp",
+        "variant": "cpp"
     },
     "C_Cpp.errorSquiggles": "enabled"
 }
